--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
+			<groupId>velocity-tools</groupId>
+			<artifactId>velocity-tools-view</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${org.springframework-version}</version>
