--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,23 @@
 		<org.slf4j-version>1.5.10</org.slf4j-version>
 	</properties>
 	<dependencies>
+		<!-- Woodstox stax api -->
+		<dependency>
+		    <groupId>org.codehaus.woodstox</groupId>
+		    <artifactId>woodstox-core-asl</artifactId>
+		    <version>4.1.1</version>
+		</dependency>
 		<!-- Apache Commons (Needed for velocity toolbox)-->
 		<dependency>
 		    <groupId>commons-digester</groupId>
 		    <artifactId>commons-digester</artifactId>
 		    <version>1.8.1</version>
+		</dependency>
+		<!-- Apache commons IO -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.0</version>
 		</dependency>
 		<!--  Joda Time -->
 		<dependency>
